修复批量更新
